--- a/docs/sun/202/sun202.tex
+++ b/docs/sun/202/sun202.tex
@@ -1,237 +1,32 @@
-\documentclass[twoside,11pt]{article}
-\pagestyle{myheadings}
-
-%------------------------------------------------------------------------------
+\documentclass[twoside,11pt,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {202.2}
-\newcommand{\stardocauthors}   {M.\,J.\,Bly}
-\newcommand{\stardocdate}      {19 February 1998}
-\newcommand{\stardoctitle}     {Starlink Subroutine Libraries \\[1.5ex]
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {202.2}
+\stardocauthors     {M.\,J.\,Bly}
+\stardocdate        {19 February 1998}
+\stardoctitle     {Starlink Subroutine Libraries \\[1.5ex]
                                 A Guide for Program Development and Linking}
-\newcommand{\stardocversion}   {software\_version}
-\newcommand{\stardocmanual}    {manual\_type}
+\stardocabstract{
+This note gives a general overview of the methods available for using
+Starlink Infrastructure subroutine libraries with applications.
+There is an outline of how to use the include files for a subroutine
+library, and a guide to the methods available for linking with the
+subroutine libraries.
+}
 % ? End of document identification
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-% Define commands for HTML-only or LaTeX-only text.
-\newcommand{\html}[1]{}
-\newcommand{\latex}[1]{#1}
-
-% Use latex2html 98.2.
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % from the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document-specific \newcommand or \newenvironment commands.
+% ? Document-specific \providecommand or \newenvironment commands.
 % ? End of document-specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-%   {\LARGE\bf \stardocversion \\ [4ex]}
-%   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-%   \vspace{10mm}
-%   \begin{center}
-%      {\Large\bf Abstract}
-%   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-%  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%   ==================
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-% \newpage
-% \begin{latexonly}
-%   \setlength{\parskip}{0mm}
-%   \tableofcontents
-%   \setlength{\parskip}{\medskipamount}
-%   \markboth{\stardocname}{\stardocname}
-% \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-%\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
 
 \section{\xlabel{introduction}Introduction}
 \label{introduction}
@@ -265,7 +60,7 @@ library has several components:
 
 \item Fortran \texttt{INCLUDE} files \texttt{bly\_err} and \texttt{bly\_par}
 
-\item ADAM\footnote{See SG/4 `\emph{ADAM -- The Starlink Software
+\item \xref{ADAM}{sg4}{}\footnote{See SG/4 `\emph{ADAM -- The Starlink Software
 Environment}'} versions of the library and shareable library
 \texttt{libbly\_adam.a} and \texttt{libbly\_adam.so}
 
@@ -297,15 +92,13 @@ but is not portable, and could lead to problems if you want to use a
 development version of the library.
 
 The recommended way to use the \texttt{INCLUDE} files for a particular
-library is to create links in your development directory to the {\tt
-INCLUDE} files, and reference the links in your source code.
+library is to create links in your development directory to the \texttt{INCLUDE} files, and reference the links in your source code.
 
 A library `\texttt{dev}' script will create the links for you in your
 working directory.  The links are \textbf{UPPER-CASE}, and it is these
 upper-case links you reference in the source code, thus:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
       PROGRAM MYPROG
 *
 *  demonstrate use of include file
@@ -315,33 +108,26 @@ upper-case links you reference in the source code, thus:
       ...
 *
       END
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 To generate the links, issue the development command:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % bly_dev
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 This will create links to ALL the \texttt{INCLUDE} files for the BLY library:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 BLY_ERR ->  /star/include/bly_err
 BLY_PAR ->  /star/include/bly_par
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 To remove the links, issue the command again with the \texttt{remove} option:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % bly_dev remove
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 You should keep the links in place while developing your program.  If you
 want to move development directories, simply remove the links and create
@@ -400,11 +186,9 @@ This means that to compile and link code with the Starlink libraries
 on Linux systems, you must use the \texttt{`-fno-second-underscore'}
 flag for the \texttt{g77} compiler/linker, thus:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % g77 -O -fno-second-underscore myprog.f -o myprog .....
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 \subsection{\xlabel{static_linking}Static Linking}
 \label{static_linking}
@@ -415,47 +199,37 @@ the \texttt{libbly.a} library.
 
 In a one-stage compile and link, you would use the following:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % f77 -O myprog.f -o myprog -L/star/lib `bly_link`
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 In a two stage compile and link, you would use the following:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % f77 -O -c myprog.f
 % f77 -O myprog.o -o myprog -L/star/lib `bly_link`
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 To use the ADAM versions of the library, if you are developing an ADAM
 application, use the following:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % alink myprog.f -o myprog -L/star/lib `bly_link_adam`
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 or:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % f77 -O -c myprog.f
 % alink myprog.o -o myprog -L/star/lib `bly_link_adam`
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 You should also include in the link phase any other library link scripts
 for those libraries that your application calls directly, and any
 libraries of your own \emph{e.g.}:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % f77 -O myprog.f -o myprog ./libmine.a -L/star/lib \
          `bly_link` `other_lib_link` -lmine2
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 where \texttt{`other\_lib\_link`} causes linking with another library
 using the link script system, and \texttt{-lmine2} causes a link with a
@@ -498,11 +272,9 @@ If you want to take advantage of the speed of dynamic linking and the
 disk space savings, you can use the shared libraries in \texttt{/star/share}
 to link with:
 
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 % f77 -O myprog.f -L/star/share `bly_link`
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 
 There are some caveats (apart from portability already mentioned):
 
